# frAISers_aadc_2018

./: AADCConfig.cmake  README.md  build_all.sh  build_user.sh
config/LiveVisualization/: LiveVisualization.adtfproject
config/LiveVisualization/adtfsessions/: Lane_follower.adtfuilayout  camera_calibration.adtfuilayout  camera_snapshot.adtfsession  camera_snapshot.adtfuilayout  checkSetup.adtfuilayout  default_session.adtfuilayout  default_session.adtfuilayout.TJ4516  devel.adtfuilayout  keyboard_remote.adtfsession  keyboard_remote.adtfuilayout  lane_detection.adtfsession  lane_detection.adtfuilayout  laserSegmentation.adtfsession  laserSegmentation.adtfuilayout  marker_test.adtfsession  marker_test.adtfuilayout  marker_test.adtfuilayout.L27556  marker_test.adtfuilayout.k21383  network_prediction.adtfsession  playback.adtfuilayout  ppc_session.adtfsession  recording.adtfuilayout  recording_session.adtfsession  segmentation.adtfsession  segmentation.adtfuilayout  speed_control.adtfuilayout  test_positioning.adtfsession  unreal_simulator.adtfsession
config/LiveVisualization/adtfsessions/adtfgraphs/: .signal_scope_view.ui_service.adtf_disptb  .signal_table_view.ui_service.adtf_disptb  .signal_tree_view.ui_service.adtf_disptb  camera_snapshot.adtfconfiglayout  camera_snapshot.adtfgraph  camera_snapshot.adtfproperties  checkSetup.adtfconfiglayout  checkSetup.adtfgraph  checkSetup.adtfproperties  default_graph.adtfconfiglayout  default_graph.adtfgraph  default_graph.adtfproperties  keyboard_remote_graph.adtfconfiglayout  keyboard_remote_graph.adtfgraph  keyboard_remote_graph.adtfproperties  lane_detection.adtfconfiglayout  ppc_graph.adtfgraph  (+23 more)
configuration_files/: basler_afterFisheye_intrinsic_calibration_Car26.yml  basler_afterFisheye_intrinsic_calibration_Car27.yml  basler_fisheye_intrinsic_calib_kalibr.yml  basler_fisheye_intrinsic_calib_kalibr_car26.yml  basler_fisheye_intrinsic_calib_kalibr_car27.yml  basler_fisheye_intrinsic_calib_opencv_car26.yml  basler_fisheye_intrinsic_calib_opencv_car27.yml  birdseyeTransFile_Car26.xml  birdseyeTransFile_Car26_segmentation.xml  birdseyeTransFile_Car27.xml  birdseyeTransFile_Car27_segmentation.xml  birdseyeTransFile_simulator.xml  roadSigns_orig.xml
description/: aadc.description
include/: aadc_custom_structs_fraisers.h  aadc_structs.h
src/aadcUser/: CMakeLists.txt  CPPLINT.cfg
src/aadcUser/AdaptiveLaneDetection/: AdaptiveLaneDetection.cpp  AdaptiveLaneDetection.h  CMakeLists.txt  camera_transformations.cpp  camera_transformations.h  customtypes.h  lane_finder.cpp  lane_finder.h  line_points_detection.cpp  line_points_detection.h  nonpin_types.h  stdafx.h  subproblem.h
src/aadcUser/BirdseyeTransform/: BirdseyeTransform.cpp  BirdseyeTransform.h  CMakeLists.txt  DijkstraGoalpointExtractor.cpp  DijkstraGoalpointExtractor.h  adtf_log_macros.h  camera_transformations.cpp  camera_transformations.h  xml_helper.hpp
src/aadcUser/CameraSnapshot/: CMakeLists.txt  CameraSnapshot.cpp  CameraSnapshot.h
src/aadcUser/DrawingFilter/: CMakeLists.txt  DrawingFilter.cpp  DrawingFilter.h
src/aadcUser/EmergencyBreak/: CMakeLists.txt  EmergencyBreak.cpp  EmergencyBreak.h
src/aadcUser/KeyboardRemoteFilter/: CMakeLists.txt  KeyboardRemoteFilter.cpp  KeyboardRemoteFilter.h  RemoteDisplayWidget.cpp  RemoteDisplayWidget.h  stdafx.h
src/aadcUser/LaserSegmentation/: CMakeLists.txt  LaserSegmentation.cpp  LaserSegmentation.h  stdafx.h
src/aadcUser/Map/MapCore/: CMakeLists.txt  IGlobalMap.h  Map.cpp  Map.h  MapObjects.cpp  MapObjects.h
src/aadcUser/Map/ThriftFilter/: CMakeLists.txt  ThriftFilter.cpp  ThriftFilter.h  stdafx.h
src/aadcUser/Map/WaypointTest/: CMakeLists.txt  WaypointTestFilter.cpp  WaypointTestFilter.h  stdafx.h
src/aadcUser/NN/NNThriftFilter/: CMakeLists.txt  NNThriftFilter.cpp  NNThriftFilter.h  stdafx.h
src/aadcUser/ObstacleFusion/: CMakeLists.txt  HitCount.cpp  HitCount.h  LaserSegBoolHitCount.cpp  LaserSegBoolHitCount.h  ObstacleFusionFilter.cpp  ObstacleFusionFilter.h  UltrasonicHitCount.cpp  UltrasonicHitCount.h  stdafx.h
src/aadcUser/PinClasses/: AsyncSampleBuffer.cpp  AsyncSampleBuffer.h  BoolSignalValuePin.cpp  BoolSignalValuePin.h  DetectionInfoPin.cpp  DetectionInfoPin.h  DriverStructPin.cpp  DriverStructPin.h  JuryStructPin.cpp  JuryStructPin.h  LaneListPin.cpp  LaneListPin.h  LaserScannerPin.cpp  LaserScannerPin.h  LaserSegPin.cpp  LaserSegPin.h  LightCtrlPin.cpp  LightCtrlPin.h  ManeuverListPin.cpp  ManeuverListPin.h  OpencvFramePin.cpp  OpencvFramePin.h  PointListPin.cpp  PointListPin.h  RoadSignDataPin.cpp  RoadSignDataPin.h  RoadSignsMapPin.cpp  RoadSignsMapPin.h  SafeQueue.h  StopWatch.h  Threadpool.h  VideoOutPin.cpp  VideoOutPin.h  customtypes.h  stdafx.h
src/aadcUser/PurePursuitSteering/: CMakeLists.txt  PurePursuitSteering.cpp  PurePursuitSteering.h  SteeringAngle_front_anchor.xml  SteeringAngle_front_anchor_cover.xml  SteeringAngle_test.xml  stdafx.h
src/aadcUser/ReceiverFilter/: CMakeLists.txt  ReceiverFilter.cpp  ReceiverFilter.h  customtypes.h  stdafx.h
src/aadcUser/ScaleCrop/: CMakeLists.txt  ScaleCrop.cpp  ScaleCrop.h
src/aadcUser/Simulator/AirSimFilter/: AirSimFilter.cpp  AirSimFilter.h  CMakeLists.txt  stdafx.h
src/aadcUser/StateMachine/: Astar.cpp  Astar.h  BackgroundPlanner.cpp  BackgroundPlanner.h  BaseTask.cpp  BaseTask.h  CMakeLists.txt  CarModel.cpp  CarModel.h  CostMap.h  DijkstraGoalpointExtractor.cpp  DijkstraGoalpointExtractor.h  DriveStraightTask.cpp  DriveStraightTask.h  EmergencyBrakeOverride.h  EnvironmentState.cpp  EnvironmentState.h  GridMap.cpp  GridMap.h  ICarCtrl.h  IControlOutput.h  ICtrlOverride.h  IPlanner.h  ISensorListeners.h  JuryComm.cpp  JuryComm.h  Lane.h  LaneFollowingPerceptionTask.cpp  LaneFollowingPerceptionTask.h  LaneFollowingTask.cpp  LaneFollowingTask.h  LaneTracker.cpp  LaneTracker.h  LocalMap.cpp  LocalMap.h  Maneuver.cpp  Maneuver.h  MatUtils.h  MergeTask.cpp  MergeTask.h  (+37 more)
src/aadcUser/TestFilter/: CMakeLists.txt  TestFilter.cpp  TestFilter.h  stdafx.h
src/aadcUser/frAISersMarkerDetection/: CMakeLists.txt  frMarkerDetector.cpp  frMarkerDetector.h
(+57 files in other folders)
